--- a/web/locale/en.json
+++ b/web/locale/en.json
@@ -1,5 +1,5 @@
 {
     "Start": "Start-en",
-    "invalid-server-name": "Server-name is invalid, can only contain letters from a to z and numbers",
+    "invalid-server-name": "Server-name is invalid, can only contain letters from a to z, 0 to 9 and can't start with 'node-'",
     "duplicate-server-name": "Server-name is already taken"
 }
