--- a/web/locale/en.json
+++ b/web/locale/en.json
@@ -3,5 +3,6 @@
     "invalid-server-name": "Server dns-name is invalid, can only contain letters from a to z, 0 to 9 and can't start with 'node-'",
     "duplicate-server-name": "Server dns-name is already taken",
     "server-name-empty-err": "Server-name can't be empty",
-    "port-number-port-err": "Invalid port-number (must be between 1000 and 65535)"
+    "port-number-port-err": "Invalid port-number (must be between 1000 and 65535)",
+    "port-number-already-in-use": "Port-number already in use"
 }
